--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.view {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  overflow-x: auto;
+  word-break: keep-all;
+  word-wrap: break-word;
+  flex-direction: column;
+  background: rgb(255, 255, 255);
+}
+
+.bg_phone {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  height: 100vh;
+  max-width: calc(100vh * 9 / 16) !important;
+  min-width: calc(100vh * 9 / 20);
+  overflow: hidden;
+  box-sizing: content-box;
+  position: relative;
+  background-image: url("../src/assets/bg-paperptexture.jpg");
+  align-items: center;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 767px) and (orientation: portrait) {
+  /* 모바일 세로 화면 크기에 대한 스타일 */
+}
