--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ code {
 .view {
   display: flex;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   overflow-x: auto;
   word-break: keep-all;
   word-wrap: break-word;
