--- a/src/pages/calendar/CalendarPage.module.css
+++ b/src/pages/calendar/CalendarPage.module.css
@@ -1,8 +1,5 @@
 :global(.react-calendar) {
-  @apply bg-orange-50 rounded-xl shadow-md w-full min-w-[300px] max-w-[600px] h-full max-h-[530px];
-  /* 캘린더의 가로 폭은 반응형, 최대 폭은 600px */
-  /* aspect-ratio: 1 / 1.6; */
-  /* 가로:세로 비율을 1:1.6으로 설정 */
+  @apply bg-white rounded-xl shadow-md w-full min-w-[300px] max-w-[600px] h-full max-h-[530px];
 }
 
 :global(.react-calendar__month-view__weekdays__weekday abbr) {
@@ -11,6 +8,20 @@
 }
 
 :global(.react-calendar__tile) {
-  @apply h-[70px] max-h-full flex items-center justify-center;
+  @apply h-[70px] max-h-full flex justify-center items-start;
   /* 날짜 셀 스타일 */
+}
+
+:global(.react-calendar__navigation) {
+  @apply flex justify-start items-center px-4 pt-5;
+  /* 헤더 전체를 왼쪽 정렬 */
+}
+
+:global(.react-calendar__navigation__label) {
+  @apply flex items-center justify-start grow-0 pointer-events-none;
+}
+
+:global(.react-calendar__navigation__label__labelText) {
+  @apply text-lg font-bold;
+  /* 텍스트 스타일 */
 }
