--- a/src/pages/calendar/CalendarPage.module.css
+++ b/src/pages/calendar/CalendarPage.module.css
@@ -5,7 +5,7 @@
 :global(.react-calendar__month-view__weekdays__weekday abbr) {
   @apply no-underline text-sm;
   /* 요일 스타일 */
-  
+
 }
 
 :global(.react-calendar__tile) {
@@ -30,4 +30,12 @@
 :global(.react-calendar__month-view__days__day--weekend) {
   @apply text-black;
   /* 텍스트 스타일 */
+}
+
+:global(.react-calendar__tile--now) {
+  @apply bg-transparent;
+}
+
+:global(.react-calendar__tile--now abbr) {
+  @apply bg-orange-300 rounded-full text-black font-bold w-[25px] h-[25px];
 }
