--- a/src/pages/calendar/CalendarPage.module.css
+++ b/src/pages/calendar/CalendarPage.module.css
@@ -1,5 +1,9 @@
 :global(.react-calendar) {
-  @apply bg-white rounded-xl shadow-md w-full min-w-[300px] max-w-[600px] h-full max-h-[530px];
+  @apply bg-white rounded-xl shadow-md w-full min-w-[300px] max-w-[600px] h-full max-h-[550px];
+}
+
+:global(.react-calendar__viewContainer) {
+  @apply mb-3;
 }
 
 :global(.react-calendar__month-view__weekdays__weekday abbr) {
@@ -9,12 +13,12 @@
 }
 
 :global(.react-calendar__tile) {
-  @apply h-[70px] max-h-full flex items-center text-base flex-col;
+  @apply h-[50px] max-h-full flex items-center text-sm flex-col;
   /* 날짜 셀 스타일 */
 }
 
 :global(.react-calendar__navigation) {
-  @apply flex justify-start items-center px-4 pt-5;
+  @apply flex justify-start items-center px-4 pt-3 mb-0;
   /* 헤더 전체를 왼쪽 정렬 */
 }
 
@@ -37,7 +41,7 @@
 }
 
 :global(.react-calendar__tile--now abbr) {
-  @apply bg-orange-300 rounded-full text-black font-bold w-[25px] h-[25px];
+  @apply bg-orange-300 rounded-full text-black font-bold w-[20px] h-[20px];
 }
 
 :global(.react-calendar__tile:enabled:hover),
