--- a/src/pages/calendar/CalendarPage.module.css
+++ b/src/pages/calendar/CalendarPage.module.css
@@ -1,5 +1,5 @@
 :global(.react-calendar) {
-  @apply bg-white rounded-xl shadow-md w-full min-w-[300px] max-w-[600px] h-full max-h-[550px];
+  @apply rounded-xl w-full min-w-[300px] max-w-[600px] h-full max-h-[550dvh] bg-[url('../../assets/bg-paperptexture.jpg')] border-none;
 }
 
 :global(.react-calendar__viewContainer) {
@@ -9,11 +9,10 @@
 :global(.react-calendar__month-view__weekdays__weekday abbr) {
   @apply no-underline text-sm;
   /* 요일 스타일 */
-
 }
 
 :global(.react-calendar__tile) {
-  @apply h-[50px] max-h-full flex items-center text-sm flex-col;
+  @apply h-[8dvh] max-h-full flex items-center text-sm flex-col;
   /* 날짜 셀 스타일 */
 }
 
@@ -23,7 +22,7 @@
 }
 
 :global(.react-calendar__navigation__label) {
-  @apply flex items-center justify-start grow-0 pointer-events-none;
+  @apply flex items-center justify-center grow-0 pointer-events-none;
 }
 
 :global(.react-calendar__navigation__label__labelText) {
