[Design] 캘린더 페이지 요소들 스타일 수정

--- a/src/pages/calendar/CalendarPage.module.css
+++ b/src/pages/calendar/CalendarPage.module.css
@@ -1,5 +1,5 @@
 :global(.react-calendar) {
-  @apply rounded-xl w-full min-w-[300px] max-w-[600px] h-full max-h-[550dvh] bg-[url('../../assets/bg-paperptexture.jpg')] border-none;
+  @apply rounded-xl w-full min-w-[300px] max-w-[600px] h-full max-h-[550dvh] bg-[url('../../assets/bg-paperptexture.jpg')] border-none font-hakgyo;
 }
 
 :global(.react-calendar__viewContainer) {
@@ -7,22 +7,25 @@
 }
 
 :global(.react-calendar__month-view__weekdays__weekday abbr) {
-  @apply no-underline text-sm;
+  @apply no-underline text-sz30;
   /* 요일 스타일 */
 }
 
 :global(.react-calendar__tile) {
-  @apply h-[8dvh] max-h-full flex items-center text-sm flex-col;
+  @apply h-[8dvh] max-h-full flex items-center text-sz25 flex-col;
   /* 날짜 셀 스타일 */
 }
 
 :global(.react-calendar__navigation) {
-  @apply flex justify-start items-center px-4 pt-3 mb-0;
-  /* 헤더 전체를 왼쪽 정렬 */
+  @apply flex justify-start items-center px-4 pt-3 mb-3;
 }
 
 :global(.react-calendar__navigation__label) {
   @apply flex items-center justify-center grow-0 pointer-events-none;
+}
+
+:global(.react-calendar__navigation__arrow) {
+  @apply pb-1 text-sz45;
 }
 
 :global(.react-calendar__navigation__label__labelText) {
@@ -40,7 +43,7 @@
 }
 
 :global(.react-calendar__tile--now abbr) {
-  @apply bg-orange-300 rounded-full text-black font-bold w-[20px] h-[20px];
+  @apply bg-orange-300 rounded-full text-black font-bold w-[3dvh] h-[3dvh];
 }
 
 :global(.react-calendar__tile:enabled:hover),
