--- a/src/index.css
+++ b/src/index.css
@@ -40,4 +40,6 @@ code {
   word-wrap: break-word;
   flex-direction: column;
   background: rgb(255, 255, 255);
+  word-break: keep-all;
+  word-wrap: break-word;
 }
