--- a/src/pages/calendar/CalendarPage.module.css
+++ b/src/pages/calendar/CalendarPage.module.css
@@ -1,5 +1,5 @@
 :global(.react-calendar) {
-  @apply rounded-xl w-full max-w-[600px] h-full border-none font-hakgyo bg-[transparent];
+  @apply rounded-xl w-full h-full max-w-[600px] border-none pt-3 font-hakgyo bg-[transparent];
 }
 
 /* :global(.react-calendar__viewContainer) {
@@ -17,7 +17,7 @@
 }
 
 :global(.react-calendar__navigation) {
-  @apply flex justify-start items-center px-4 pt-3 mb-3;
+  @apply flex justify-start items-center px-4 mb-3;
 }
 
 :global(.react-calendar__navigation__label) {
